# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-04-16  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new container functions "setter"

2011-04-15  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new container functions
        * Adapt "setter" modules according to CYBOP knowledge schema:
            merge "compound" and "part" into "model"; rename "model" into "item"

2011-04-14  Christian Heller  <christian.heller@tuxtax.de>

        * Redesign container functions

2011-04-13  Christian Heller  <christian.heller@tuxtax.de>

        * Redesign container functions

2011-04-05  Christian Heller  <christian.heller@tuxtax.de>

        * Experiment with allocation- and other container functions

2011-04-01  Christian Heller  <christian.heller@tuxtax.de>

        * Implement and investigate fraction operations

2011-03-31  Christian Heller  <christian.heller@tuxtax.de>

        * Split container- and element-related functionality into separate files in "executor/comparator/"
        * Start reimplementation of "executor/accessor/getter/"

2011-03-27  Christian Heller  <christian.heller@tuxtax.de>

        * Completely redesign comparison modules in directory "executor/comparator/"

2011-03-26  Christian Heller  <christian.heller@tuxtax.de>

        * Add many kinds of comparator files to directory "executor/comparator/"
        * Add files "calculate_cybol_abstraction.c", "compare_cybol_abstraction.c", "route_cybol_abstraction.c"
            to directory "constant/abstraction/cybol/"
        * Add files "primitive_operation_abstraction.c", "operation_abstraction.c"