@@ -1,14 +1,13 @@
 <model>
-    <part name="output" channel="inline" abstraction="operation/plain" model="send">
-        <property name="channel" channel="inline" abstraction="text/plain" model="shell"/>
-        <property name="language" channel="inline" abstraction="text/plain" model="text/plain"/>
-        <property name="message" channel="inline" abstraction="text/plain" model="Hello, World!"/>
+    <part name="startup" channel="inline" abstraction="operation/plain" model="sequence">
+        <property name="model" channel="file" abstraction="text/cybol" model="shell_output_sequence/model.cybol"/>
     </part>
     <part name="shutdown" channel="inline" abstraction="operation/plain" model="exit"/>
 </model>
 
 <!--
     This example prints the famous "Hello, World!" string on the shell (standard output device).
+    It calls an external model and executes it as sequence of commands.
     Finally, an "exit" operation shuts down the application.
 /-->
 
