@@ -39,5 +39,10 @@ static wchar_t LOOP_FLOW_OPERATION_CYBOL_MODEL_ARRAY[] = {L'l', L'o', L'o', L'p'
 static wchar_t* LOOP_FLOW_OPERATION_CYBOL_MODEL = LOOP_FLOW_OPERATION_CYBOL_MODEL_ARRAY;
 static int* LOOP_FLOW_OPERATION_CYBOL_MODEL_COUNT = NUMBER_4_INTEGER_MEMORY_MODEL_ARRAY;
 
+/** The sequence flow operation cybol model. */
+static wchar_t SEQUENCE_FLOW_OPERATION_CYBOL_MODEL_ARRAY[] = {L's', L'e', L'q', L'u', L'e', L'n', L'c', L'e'};
+static wchar_t* SEQUENCE_FLOW_OPERATION_CYBOL_MODEL = SEQUENCE_FLOW_OPERATION_CYBOL_MODEL_ARRAY;
+static int* SEQUENCE_FLOW_OPERATION_CYBOL_MODEL_COUNT = NUMBER_8_INTEGER_MEMORY_MODEL_ARRAY;
+
 /* FLOW_OPERATION_CYBOL_MODEL_SOURCE */
 #endif
