@@ -1,0 +1,38 @@
+/*
+ * Copyright (C) 1999-2011. Christian Heller.
+ *
+ * This file is part of the Cybernetics Oriented Interpreter (CYBOI).
+ *
+ * CYBOI is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * CYBOI is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with CYBOI.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Cybernetics Oriented Programming (CYBOP) <http://www.cybop.org>
+ * Christian Heller <christian.heller@tuxtax.de>
+ *
+ * @version $RCSfile: loop_flow_operation_cybol_name.c,v $ $Revision: 1.4 $ $Date: 2009-01-31 16:06:30 $ $Author: christian $
+ * @author Christian Heller <christian.heller@tuxtax.de>
+ */
+
+#ifndef SEQUENCE_FLOW_OPERATION_CYBOL_NAME_SOURCE
+#define SEQUENCE_FLOW_OPERATION_CYBOL_NAME_SOURCE
+
+#include <stddef.h>
+#include "../../../../../constant/model/memory/integer_memory_model.c"
+
+/** The model sequence flow operation cybol name. */
+static wchar_t MODEL_SEQUENCE_FLOW_OPERATION_CYBOL_NAME_ARRAY[] = {L'm', L'o', L'd', L'e', L'l'};
+static wchar_t* MODEL_SEQUENCE_FLOW_OPERATION_CYBOL_NAME = MODEL_SEQUENCE_FLOW_OPERATION_CYBOL_NAME_ARRAY;
+static int* MODEL_SEQUENCE_FLOW_OPERATION_CYBOL_NAME_COUNT = NUMBER_5_INTEGER_MEMORY_MODEL_ARRAY;
+
+/* SEQUENCE_FLOW_OPERATION_CYBOL_NAME_SOURCE */
+#endif
