@@ -27,8 +27,6 @@
         <property name="result" channel="inline" abstraction="path/knowledge" model=".counter.break"/>
     </part>
 
-        * Use "route/sequence" abstraction instead of "send" model + "signal" property to execute a compound model as algorithm
-
         * Try to increase performance by commenting out "memset" in array allocation
 
         * Optimise "replace_array" function by replacing offset with constantly growing variable (less addition in loop necessary)
